--- a/requirements.txt
+++ b/requirements.txt
@@ -72,6 +72,7 @@ pyRFC3339==1.1
 python-apt==2.0.0+ubuntu0.20.4.5
 python-dateutil==2.7.3
 python-debian===0.1.36ubuntu1
+python-dotenv==0.19.0
 pytz==2019.3
 pyxdg==0.26
 PyYAML==5.3.1
@@ -94,6 +95,6 @@ virtualenv==20.0.17
 visitor==0.1.3
 wadllib==1.3.3
 Werkzeug==0.16.0
-WTForms==2.3.3
+WTForms==2.2.1
 xkit==0.0.0
 zipp==3.5.0
